force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/bpats__ASM_Generic_Setting__mdt.object-meta.xml
<CustomObject>
    <label>ASM Generic Setting</label>
    <pluralLabel>ASM Generic Settings</pluralLabel>
</CustomObject>