force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Append_Index_In_Bulk_Load__c.field-meta.xml
<CustomField>
    <fullName>bpats__Append_Index_In_Bulk_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Index In Bulk Load</label>
    <type>Checkbox</type>
</CustomField>