force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Country_Codes__c.field-meta.xml
<CustomField>
    <fullName>bpats__Country_Codes__c</fullName>
    <label>Country Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>