force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Default_Related_List__c.field-meta.xml
<CustomField>
    <fullName>bpats__Default_Related_List__c</fullName>
    <label>Default Related List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>