force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Dextra_Extra_Fields_Number__c.field-meta.xml
<CustomField>
    <fullName>bpats__Dextra_Extra_Fields_Number__c</fullName>
    <label>Dextra Extra Fields Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>