force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Search_Candidate_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Search_Candidate_Field__c</fullName>
    <label>Search Candidate Field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>