force-app/main/default/objects/bpats__ASM_Generic_Setting__mdt/fields/bpats__Search_Radius__c.field-meta.xml
<CustomField>
    <fullName>bpats__Search_Radius__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Search Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>